Bug #24896 mysql_upgrade core dumps on RHEL3 using 5.0.30 commerical binaries
Submitted: 7 Dec 2006 22:58 Modified: 21 Dec 2006 21:23
Reporter: Hunter Ritchie
Status: Closed
Category:Server: Installing Severity:S2 (Serious)
Version:5.0.30 OS:Linux (RHEL3, OS X)
Assigned to: Daniel Fischer Target Version:
Tags: mysql_upgrade, RHEL3

[7 Dec 2006 22:58] Hunter Ritchie
Description:
mysql_upgrade seg faults (core dumps) when I run it.  This happened on an upgrade from
community binaries (5.0.27) to commericial binaries (5.0.30).  I uninstalled the RPMS,
and re-installed version 5.0.30, and found the same behavior

OS: Red Hat Enterprise Linux ES release 3 (Taroon Update 4)
RPMS:
MySQL-client-enterprise-5.0.30-0.rhel3.i386
(server,shared, and devel also installed, same version)

I verified it was "not my system" by installing
MySQL-<client,server,etc>-enterprise-5.0.28-0.rhel3.i386 and got the expected behavior.

How to repeat:
install version 5.0.30 of the commerical (OEM) binaries
[root]# mysql_upgrade --basedir=/usr -p

Suggested fix:
I didn't even look at the cores, i'm assuming they're stripped and don't have debug
symbols.  So, I just backed off to versin 5.0.28
[8 Dec 2006 8:55] Valeriy Kravchuk
Thank you for a bug report. Verified just as described.
[12 Dec 2006 14:08] Daniel Fischer
Manually set to patch pending.

http://lists.mysql.com/commits/16634
[12 Dec 2006 15:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16833

ChangeSet@1.2328, 2006-12-12 15:47:02+01:00, df@kahlann.erinye.com +1 -0
  BUG#24896 magnus' suggestion
[16 Dec 2006 22:21] Arkadiusz Miskiewicz
Note that the same bug exists in 5.1.14 and I can confirm that patch attached to this
issue fixes the problem in that version, too.
[19 Dec 2006 6:00] Lachlan Mulcahy
This error can also appear as "Bus Error" on Mac OSX.

The problem again only occurs when the -p or --password option is specified.
[19 Dec 2006 6:56] Iggy Galarza
Marked 18156 as a partial duplicate of this bug.
[21 Dec 2006 15:27] Joerg Bruehe
Bug fix is in 5.0.32 and will be in 5.1.15.
[21 Dec 2006 21:23] Paul DuBois
Noted in 5.0.32, 5.1.15 changelogs.

mysql_upgrade failed if the --password (or -p) option was given.