BUG#24896 mysql_upgrade -p fix

client/mysql_upgrade.c:
  BUG#24896 mysql_upgrade core dumps on RHEL3 using 5.0.30 commerical binaries